--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,181 @@
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div.counter {
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 50px;
+    background-color: white;
+    box-shadow: 5px 5px 1px lightgrey;
+    content: "Counter";
+    text-align: center;
+    vertical-align: middle;
+    padding: 25px 25px 0px;
+    color: #999999;
+    font-size: 24px;
+    transition: all 0.1s ease-in-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+div.counter span.points {
+    font-weight: 1000;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+div.counter span.points.added {
+    color: #16c716;
 }
 
-.App-link {
-  color: #61dafb;
+div.counter span.points.removed {
+    color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div.counter span.percentage {
+    font-weight: 400;
+}
+
+.split-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+.splits {
+    flex: 3;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.full-width-bar {
+    flex: 1;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+
+.icon {
+    margin-top: 20px;
+}
+
+.result {
+    font-size: 24px;
+    margin-top: 20px;
+}
+
+.example {
+    width: 80%;
+    text-align: center;
+    font-size: 42px;
+    font-style: italic;
+    font-weight: bold
+}
+
+.example img {
+    float: left;
+    margin: 20px 15px 0 0;
+}
+
+.example span {
+    float: left;
+}
+
+.example br {
+    display: block;
+    height: 20px;
+    float: none;
+    clear: both;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    border: 0px solid white;
+    color: white;
+    font-size: 48px;
+}
+
+.box.a {
+    color: #b0fdff;
+    background: radial-gradient(circle, rgb(0, 237, 245) 0%, rgba(0, 237, 245, 0.38) 100%);
+}
+
+.box.b {
+    background: radial-gradient(circle, rgb(240, 143, 255) 0%, rgb(213, 127, 227) 100%);
+    color: #75447c;
+}
+
+.box.correct {
+    background: #16c716 !important;
+    color: white;
+}
+
+.box.incorrect {
+    background: red !important;
+    color: black;
+}
+
+span.choice {
+    font-weight: bold;
+    font-size: 96px;
+}
+
+.keyboard-button {
+    display: inline-block;
+    padding: 20px 30px;
+    height: 25px;
+    width: 15px;
+    font-size: 24px;
+    float: left;
+    background-color: #fff;
+    /*border: 2px solid #8d8d8d;*/
+    border-radius: 6px;
+    box-shadow: 5px 10px #e0e0e0;
+    cursor: pointer;
+    user-select: none;
+    transition: all 0.1s ease-in-out;
+    font-weight: 1000;
+    color: #666666;
+    margin: 5px;
+}
+
+.keyboard-button.pressed {
+    box-shadow: 5px 4px #ccc;
+    transform: translateY(6px);
+}
+
+.keyboard-button.blue {
+    background-color: #00EDF5FF;
+    /*border: 2px solid #00EDF5FF;*/
+    color: white;
+}
+
+.keyboard-button.pink {
+    background-color: #F08FFFFF;
+    /*border: 2px solid #00EDF5FF;*/
+    color: white;
+}
+
+.keyboard-button.grey {
+    background-color: aliceblue;
+    /*border: 2px solid #00EDF5FF;*/
+    color: white;
 }
